--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 
       <div id="top-screen">
 
+        <div id="ts-saved-value">
+
+        </div>
+
+        <div id="ts-operator">
+
+        </div>
+
+        <div id="ts-second-saved-value">
+
+        </div>
+
+        <div id="ts-equal">
+
+        </div>
+
+
       </div>
 
       <div id="bottom-screen">
@@ -41,7 +58,7 @@
 
 
   <script src="script.js"></script>
-  <script src="calculations.js"></script>
+  <!-- <script src="calculations.js"></script> -->
 
 </body>
 
