--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Calculator</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,19 +17,23 @@
 
       <div id="top-screen">
 
-        <div id="ts-saved-value">
+        <div id="top-screen-values">
 
-        </div>
+          <div id="ts-saved-value">
 
-        <div id="ts-operator">
+          </div>
 
-        </div>
+          <div id="ts-operator">
 
-        <div id="ts-second-saved-value">
+          </div>
 
-        </div>
+          <div id="ts-second-saved-value">
 
-        <div id="ts-equal">
+          </div>
+
+          <div id="ts-equal">
+
+          </div>
 
         </div>
 
@@ -34,6 +41,14 @@
       </div>
 
       <div id="bottom-screen">
+
+        <div id="top-screen-values">
+
+          <div id="bs-main-value">
+
+          </div>
+
+        </div>
 
       </div>
 
